--- a/testimonial.html
+++ b/testimonial.html
@@ -182,7 +182,7 @@
                                     опыт всем, кто хочет расширить свои знания и
                                     профессиональную сеть."
                                 </p>
-                                <h5>Эмили Джонсон</h5>
+                                <h5>Эмма Картер</h5>
                             </div>
                             <div class="testimonial-item text-center">
                                 <img
@@ -202,7 +202,7 @@
                                     участвовать. Я уже с нетерпением жду
                                     следующего курса!"
                                 </p>
-                                <h5>Дэвид Смит</h5>
+                                <h5>Андрей Смичер</h5>
                             </div>
                             <div class="testimonial-item text-center">
                                 <img
@@ -222,7 +222,7 @@
                                     самых значимых профессиональных опытов за
                                     последние годы."
                                 </p>
-                                <h5>Линда Чен</h5>
+                                <h5>Линда Симонова</h5>
                             </div>
                         </div>
                     </div>
